cambios de la web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-with">
-    <title>Portfolio Simple</title>
+    <title>JaviLesacaPro</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Inter:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -65,15 +65,15 @@
 
         <section class="seccion works" id="works">
             <h2 class="h2">Trabajos</h2>
-            <p class="p">Te presento mis trabajos realizados mientras estudiaba el grado superior de Desarrollo de Aplicaciones Multiplataforma (DAM).</p>
+            <p class="p">Aquí puedes ver una selección de los proyectos que he realizado a lo largo de mi trayectoria formativa.</p>
 
             <div class="grid">
                 <article class="article">
-                    <a class="a" href="#" title="Trabajo1">
+                    <a class="a" href="https://github.com/javilesaca/ranking-videojuegos" target="_blank" rel="noopener norefereer" title="Ranking de Videojuegos">
                         <figure class="figure">
                         <img src="assets/trabajo1.jpeg" alt="Imagen" class="img" loading="lazy">
                         </figure>
-                        <h4 class="h4">Nombre Trabajo</h4>
+                        <h4 class="h4">Ranking de Videojuegos</h4>
                     </a>
                 </article>
                 <article class="article">
@@ -112,13 +112,13 @@
                       </svg>
                 </a>
             </li>
-            <li class="li">
+        <!--    <li class="li">
                 <a href="#" class="a" title="Nombre" target="-blank" rel="noopener norefereer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="svg" viewBox="0 0 16 16">
                         <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
                       </svg>
                 </a>
-            </li>
+            </li> -->
         </ul>
         </section>
 
