--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Inter:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/font/style.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <script defer src="https://code.jquery.com/jquery-3.7.1.slim.js"></script> 
     <script defer src="js/app.js"></script> 
 </head>
