Modificacion para añadir fotos y links a trabajos

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <section class="seccion works" id="works">
-            <h2 class="h2">Trabajos</h2>
+            <h2 class="h2">Proyectos</h2>
             <p class="p">Aquí puedes ver una selección de los proyectos que he realizado a lo largo de mi trayectoria formativa.</p>
 
             <div class="grid">
@@ -80,11 +80,27 @@
                 <article class="article">
                     <a class="a" href="https://github.com/javilesaca/UnityHockeyPong" target="_blank" rel="noopener norefereer" title="Hockey Pong">
                         <figure class="figure">
-                        <img src="assets/HockeyPong.jpg" alt="Imagen" class="img" loading="lazy">
+                        <img src="assets/HockeyPongB.jpeg" alt="Imagen" class="img" loading="lazy">
                         </figure>
                         <h4 class="h4">Hockey Pong</h4>
                     </a>
                 </article>
+                    <article class="article">
+                        <a class="a" href="https://github.com/javilesaca/EventDashboard" target="_blank" rel="noopener norefereer" title="EventDashboard">
+                            <figure class="figure">
+                            <img src="assets/EventDashboard.jpeg" alt="Imagen" class="img" loading="lazy">
+                            </figure>
+                            <h4 class="h4">Panel de Eventos</h4>
+                        </a>    
+                </article>
+                <article class="article">
+                    <a class="a" href="" target="_blank" rel="noopener norefereer" title="Hockey Pong">
+                        <figure class="figure">
+                        <img src="assets/HockeyPong.jpg" alt="Imagen" class="img" loading="lazy">
+                        </figure>
+                        <h4 class="h4"></h4>
+                    </a>
+                </article>    
                 
             </div>
 
