Actualizacion de assets y link linikedin

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 
                 <ul class="ul">
                     <li class="li">
-                        <a href="https://linkedin.com/in/javier-lesaca-195647249" class="a" target="_blank" rel="noopener norefereer" title="LinkedIn">Visitar mi LinkedIn</a>
+                        <a href="https://linkedin.com/in/javilesacapro" class="a" target="_blank" rel="noopener norefereer" title="LinkedIn">Visitar mi LinkedIn</a>
                     </li>
                     <li class="li">
                         <a href="https://github.com/javilesaca" class="a" target="_blank" rel="noopener norefereer" title="Github">Visitar mi Github</a>
@@ -72,7 +72,7 @@
                 <article class="article">
                     <a class="a" href="https://github.com/javilesaca/ranking-videojuegos" target="_blank" rel="noopener norefereer" title="Ranking de Videojuegos">
                         <figure class="figure">
-                        <img src="assets/trabajo1.jpeg" alt="Imagen" class="img" loading="lazy">
+                        <img src="assets/RankingVideojuegos.jpeg" alt="Imagen" class="img" loading="lazy">
                         </figure>
                         <h4 class="h4">Ranking de Videojuegos</h4>
                     </a>
@@ -96,7 +96,7 @@
                 <article class="article">
                     <a class="a" href="" target="_blank" rel="noopener norefereer" title="Hockey Pong">
                         <figure class="figure">
-                        <img src="assets/HockeyPong.jpg" alt="Imagen" class="img" loading="lazy">
+                        <img src="assets/MemoryCards.jpeg" alt="Imagen" class="img" loading="lazy">
                         </figure>
                         <h4 class="h4"></h4>
                     </a>
