--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-with">
     <title>JaviLesacaPro</title>
+    <!-- Metaetiquetas para Open Graph -->
+    <meta property="og:title" content="JaviLesacaPro">
+    <meta property="og:description" content="Portfolio de Javier Lesaca, Backend Developer.">
+    <meta property="og:image" content="https://javilesaca.pro/assets/preview.jpg">
+    <meta property="og:url" content="https://javilesaca.pro/">
+    <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Inter:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alice&family=Inter:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/font/style.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-    <script defer src="https://code.jquery.com/jquery-3.7.1.slim.js"></script> 
-    <script defer src="js/app.js"></script> 
+    <script defer src="https://code.jquery.com/jquery-3.7.1.slim.js"></script>
+    <script defer src="js/app.js"></script>
 </head>
 
 <body>
@@ -98,7 +107,7 @@
                         <figure class="figure">
                         <img src="assets/MemoryCards.jpeg" alt="Imagen" class="img" loading="lazy">
                         </figure>
-                        <h4 class="h4"></h4>
+                        <h4 class="h4">Memory Cards</h4>
                     </a>
                 </article>    
                 
